# mlx-confucius4-tts

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  USAGE.md  build.sh  clean.sh  model.md  prepare.sh  start.sh
.github/workflows/: release.yml
apps/: c4tts_cli.cpp
docs/: OPTIONAL.md  PLAN.md
include/c4tts/: audio.h  campplus.h  dit.h  lang_tokens.h  longform.h  nn.h  npy.h  pipeline.h  profile.h  s2a.h  server.h  t2s.h  tensor.h  tokenizer.h  vocoder.h  w2vbert.h  wav_io.h  weights.h
src/: longform.cpp  pipeline.cpp  profile.cpp  tokenizer.cpp
src/audio/: kaldi_fbank.cpp  mel.cpp  resample.cpp  wav_io.cpp
src/campplus/: campplus.cpp
src/core/: weights.cpp
src/nn/: nn.cpp
src/s2a/: dit.cpp  dit_modules.cpp  flow_matching.cpp  length_regulator.cpp  masked_diff.cpp
src/server/: server.cpp  web_assets.cpp
src/t2s/: gpt2.cpp  sampling.cpp  speaker_encoder.cpp  text2semantic.cpp
src/vocoder/: activation.cpp  bigvgan.cpp
src/w2vbert/: w2vbert.cpp
tests/: CMakeLists.txt  test_backhalf.cpp  test_bigvgan.cpp  test_campplus.cpp  test_cfm.cpp  test_dit.cpp  test_dit_block.cpp  test_dit_full.cpp  test_dit_wn.cpp  test_fbank.cpp  test_mel.cpp  test_nn.cpp  test_npy.cpp  test_prompt.cpp  test_resample.cpp  test_s2a.cpp  test_s2a_inference.cpp  test_sampling.cpp  test_seamless.cpp  test_t2s.cpp  test_t2s_full.cpp  test_t2s_kv.cpp  test_t2s_mods.cpp  test_t2s_real.cpp  test_tokenizer.cpp  test_vocoder.cpp  test_w2vbert.cpp  test_wav_io.cpp  test_weights.cpp
tools/: dump_golden.py  export_tokenizer.py  export_weights.py  gen_test_fixtures.py
